syntax = "proto3";
package stride.stakeibc;

import "stride/stakeibc/validator.proto";
import "gogoproto/gogo.proto";
import "cosmos_proto/cosmos.proto";

option go_package = "github.com/Stride-Labs/stride/v15/x/stakeibc/types";

message HostZone {
  string chain_id = 1;
  string bech32prefix = 17;
  string connection_id = 2;
  string transfer_channel_id = 12;
  // ibc denom on stride
  string ibc_denom = 8;
  // native denom on host zone
  string host_denom = 9;
  uint64 unbonding_period = 26;
  repeated Validator validators = 3;
  string deposit_address = 18
      [ (cosmos_proto.scalar) = "cosmos.AddressString" ];
  string withdrawal_ica_address = 22
      [ (cosmos_proto.scalar) = "cosmos.AddressString" ];
  string fee_ica_address = 23
      [ (cosmos_proto.scalar) = "cosmos.AddressString" ];
  string delegation_ica_address = 24
      [ (cosmos_proto.scalar) = "cosmos.AddressString" ];
  string redemption_ica_address = 25
      [ (cosmos_proto.scalar) = "cosmos.AddressString" ];
  string total_delegations = 13 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
    (gogoproto.nullable) = false
  ];
  string last_redemption_rate = 10 [
    (cosmos_proto.scalar) = "cosmos.Dec",
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable) = false
  ];
  string redemption_rate = 11 [
    (cosmos_proto.scalar) = "cosmos.Dec",
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable) = false
  ];
  string min_redemption_rate = 20 [
    (cosmos_proto.scalar) = "cosmos.Dec",
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable) = false
  ];
  string max_redemption_rate = 21 [
    (cosmos_proto.scalar) = "cosmos.Dec",
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable) = false
  ];
  string min_inner_redemption_rate = 28 [
    (cosmos_proto.scalar) = "cosmos.Dec",
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable) = false
  ];
  string max_inner_redemption_rate = 29 [
    (cosmos_proto.scalar) = "cosmos.Dec",
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable) = false
  ];
  bool lsm_liquid_stake_enabled = 27;
  bool halted = 19;
  reserved 4, 5, 6, 7, 14, 15, 16;
}
